# qdb-qscore

./: CMakeLists.txt  ConfigLoader.h  Debugger.cpp  Debugger.h  Event.cpp  Event.h  LICENSE  Log.cpp  Log.h  PythonProcessor.cpp  PythonProcessor.h  QSCore.cpp  QSCore.ini  QSCore.sln  QSCore.vcxproj  QSCore.vcxproj.filters  QiskitProcessor.cpp  QiskitProcessor.h  README.md  RestClient.cpp  RestClient.h  SessionStorage.cpp  SessionStorage.h  StdCapture.cpp  StdCapture.h  TketProcessor.cpp  TketProcessor.h  Typedefs.h  Utils.cpp  Utils.h  WebFrontend.cpp  WebFrontend.h  get_deps.sh
dap/: Impl.cpp  Impl.h  chan.h  content_stream.cpp  content_stream.h  io.cpp  network.cpp  network.h  nlohmann_json_serializer.cpp  nlohmann_json_serializer.h  null_json_serializer.h  protocol.h  protocol_events.cpp  protocol_requests.cpp  protocol_response.cpp  protocol_types.cpp  session.cpp  session.h  socket.cpp  socket.h  typeinfo.cpp  typeof.cpp
interfaces/: ifrontend.h  iqvm.h
qdb-decom/: server.py
qvm/: QppQVM.cpp  QppQVM.h
scripts/: README.md
scripts/qasm2qir/: qasm2qir.py  qasm2qir.service  requirements.txt
scripts/qdb-decom/: README.md  server2.py
scripts/qdb-decom/scripts/: README.md
test/: set-env.bat  test_dec.bat
test/qasm/: file10.qasm  file15.qasm  file20.qasm  file25.qasm  file26.qasm  file27.qasm  file28.qasm  file30.qasm
test/results/arm/: NVidia_GH200.json
test/results/x86/amd/: Genoa_EPYC_9224_results.json  Rysen5_3600_results.json
test/results/x86/intel/: Corei7-8565U_results.json
ws/: WSListener.cpp  WSListener.h  WSServer.cpp  WSServer.h  WSSession.cpp  WSSession.h
